prevent text from being highlighted on mobile

--- a/styl/state-common.styl
+++ b/styl/state-common.styl
@@ -15,6 +15,14 @@
   #viewport
     position: fixed
 
+    *
+      -webkit-touch-callout none
+      -webkit-user-select none
+      -khtml-user-select none
+      -moz-user-select none
+      -ms-user-select none
+      user-select none
+
     #fa-app
       height 1366px
       width 768px
